# policy-pass-datapipeline-gcp

./: .gitignore  .pr_agent.toml  CLAUDE.md  README.md  pyproject.toml  run_api.sh
.github/: pull_request_template.md
.github/workflows/: deploy-airflow.yml  pr-agent.yml
config/: models.py
dags/: dag_collect_index.py  dag_datasync.py  dag_qa_generation.py
dags/utils/: cloud_run.py  datasync_trigger.py  github_dispatch.py
docs/: data-handoff-guide.md  experiment-results.md  monitoring-troubleshooting.md  plan.md  rag-qa-pipeline.drawio  thesis-writing-guide.md
monitoring/grafana/dashboards/: gce-vm-monitoring.json  mongodb-exporter.json  (+2 more)
monitoring/prometheus/: prometheus.yml
prompts/: qa_generation_system.txt
scripts/: collect_policies.py  generate_figures.py  generate_qa.py  generate_thesis.py  run_phase6_experiments.py  setup_grafana.sh  sync_gcs_assets_to_mongo.py  verify_data_portal_api.py
scripts/experiments/: __init__.py  _common.py  run_all.py  step1_retrieval.py  step2_generation.py  step3_evaluation.py  step4_judge_comparison.py  step5_analysis.py  step6_tables_figures.py
src/api/: cloud_run.py  main.py  monitoring.py  schemas.py
src/evaluation/: __init__.py  evaluator.py  llm_judge.py  ragas_metrics.py  report.py
src/generation/: llm_client.py  prompt.py
src/ingestion/: chunker.py  mongo_client.py  pipeline.py
src/retrieval/: bm25_store.py  pipeline.py  reranker.py  vector_store.py
tests/: test_dag_utils.py  test_evaluation.py  test_gcs_client.py  test_generate_qa.py  test_generation.py  test_phase6_utils.py  test_pipeline.py  test_retrieval.py  test_ui.py
(+10 files in other folders)
