[project]
name = "rag-youth-policy"
version = "0.1.0"
description = "Hybrid RAG 기반 학생/청년 정부 정책 QnA 시스템 — 멀티 LLM 응답 신뢰성 비교 파이프라인"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]
api = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "litellm>=1.50",
    "google-cloud-aiplatform>=1.60",
    "faiss-cpu>=1.8",
    "rank-bm25>=0.2",
    "pymongo>=4.8",
    "google-cloud-storage>=2.18",
    "google-cloud-monitoring>=2.22",
    "slowapi>=0.1.9",
]
rerank = ["sentence-transformers>=3.0"]
ingestion = [
    "pymongo>=4.8",
    "pymupdf>=1.24",
    "tiktoken>=0.7",
    "google-cloud-storage>=2.18",
]
indexer = [
    "litellm>=1.50",
    "google-cloud-aiplatform>=1.60",
    "faiss-cpu>=1.8",
]
eval = ["ragas>=0.4,<0.5", "deepeval>=1.0"]
monitoring = ["google-cloud-monitoring>=2.22"]
ko = ["kss>=6.0", "mecab-python3>=1.0"]
viz = ["matplotlib>=3.8", "plotly>=5.0", "pandas>=2.0"]
ui = ["streamlit>=1.38", "httpx>=0.27"]
crawl = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
]
aws = ["boto3>=1.34"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*", "config*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
known-first-party = ["src", "config"]

[tool.pytest.ini_options]
testpaths = ["tests"]
